<!--
  ~ Copyright (C) 2021 The Android Open Source Project.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">Inventario</string>
    <string name="sell">Vender</string>
    <string name="quantity">Marca:</string>
    <string name="quantity_req">Marca <font color='#FF0000'>*</font></string>
    <string name="item_name_req">Modelo de laptop <font color='#FF0000'>*</font></string>
    <string name="item_price_req">Numero de serie <font color='#FF0000'>*</font></string>
    <string name="save_action">Guardar</string>
    <string name="item_detail_fragment_title">Detalles del producto</string>
    <string name="add_fragment_title">Añadir producto</string>
    <string name="edit_fragment_title">Editar producto</string>
    <string name="item_name">Modelo</string>
    <string name="price">No. serie</string>
    <string name="quantity_in_stock">Marca</string>
    <string name="item">Modelo</string>
    <string name="delete">Marcar salida</string>
    <string name="delete_question">¿Estás seguro que quieres marcar salida?</string>
    <string name="no">No</string>
    <string name="yes">Sí</string>
    <string name="currency_symbol">$</string>
    <string name="edit_item">Editar Producto</string>
    <string name="add_new_item">Agregar nuevo producto</string>
    <string name="search_hint">Buscar</string>
</resources>